[package]
name = "prospekt"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui-file-dialog = "0.13.0"
egui_dock = "0.19.0"
egui_extras = "0.34.1"
env_logger = "0.11.10"
headcrab-kv = { git = "https://github.com/mikesk8r/headcrab" }
headcrab-vtf = { git = "https://github.com/mikesk8r/headcrab" }
